add cypress e2e test

--- a/src/index.temp.html
+++ b/src/index.temp.html
@@ -12,5 +12,6 @@
     <input type="checkbox">
     <input type="checkbox">
     <input type="input">
+    <img src="http://upload-images.jianshu.io/upload_images/16001544-c2da7913fd1d6a9e?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">
 </body>
 </html>
