--- a/src/index.temp.html
+++ b/src/index.temp.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>燕云长风</title>
+    <style>
+        div{
+            white-space: pre !important
+        }
+    </style>
 </head>
 <body>
     <input type="checkbox">
@@ -12,6 +17,10 @@
     <input type="checkbox">
     <input type="checkbox">
     <input type="input">
-    <img src="http://upload-images.jianshu.io/upload_images/16001544-c2da7913fd1d6a9e?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">
+    <textarea id="textarea"></textarea>
+    <div id="areahtml">
+
+    </div>
+    <img src="https://pic3.zhimg.com/80/v2-7614bec08465b919e4e8e2bb3e2789ba_hd.jpg" alt="">
 </body>
 </html>
